# k-routing

./: CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  publish.yml
docs/: ACTIVATION_TRACE.md  ARCHITECTURE.md  ONE_PAGER.md  ORIGIN_STORY.md  ROUTING_TIERS.md
examples/: hello_klaw.py  k_address.py  openai_compat.py  tier_distribution.py
holdtheline/: index.html
openclaw/: README.md  pyproject.toml
openclaw/src/klaw/: __init__.py  __main__.py  auth.py  mcp_server.py  router.py  streamer.py
openclaw/tests/: test_router.py
openpod/: README.md  pyproject.toml
openpod/site/: index.html
openpod/src/openpod/: __init__.py  __main__.py
site/: index.html
